Fixed minor error

--- a/webgl_project.html
+++ b/webgl_project.html
@@ -85,7 +85,7 @@ Passing the Model-View Matrix.
 
 <script type="text/javascript" src="initShaders.js"></script>
 
-<script type="text/javascript" src="WebGL_example_16.js"></script>
+<script type="text/javascript" src="webgl_project.js"></script>
 
 </head>
 
