Updated readme and remove global variables

--- a/webgl_project.html
+++ b/webgl_project.html
@@ -116,7 +116,7 @@ Passing the Model-View Matrix.
 
 		<p>
 		
-		<button id="reset-button">Reset</button>
+		<!--<button id="reset-button">Reset</button>-->
 		
 		</p>
 		
