--- a/webgl_project.html
+++ b/webgl_project.html
@@ -18,7 +18,7 @@ J. Madeira - October 2015
 
 -->
 	
-<title>WebGL example 16 &mdash; 3D Models</title>
+<title>WebGL project &mdash; 3D Models</title>
 
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
