--- a/webgl_project.html
+++ b/webgl_project.html
@@ -3,8 +3,8 @@
 <html>
 
 <head>
-	
-<!--
+
+	<!--
 
 WebGL_example_16.html
 
@@ -17,12 +17,12 @@ Modular code organization.
 J. Madeira - October 2015
 
 -->
-	
-<title>WebGL project &mdash; 3D Models</title>
 
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+	<title>WebGL project &mdash; 3D Models</title>
 
-<!--
+	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+	<!--
 
 The simple vertex and fragment shaders.
 
@@ -32,8 +32,8 @@ Passing the Model-View Matrix.
 
 -->
 
-<script id="shader-vs" type="x-shader/x-vertex">
-	
+	<script id="shader-vs" type="x-shader/x-vertex">
+
     attribute vec3 aVertexPosition;
 
     attribute vec3 aVertexColor;
@@ -60,7 +60,7 @@ Passing the Model-View Matrix.
     }
 </script>
 
-<script id="shader-fs" type="x-shader/x-fragment">
+	<script id="shader-fs" type="x-shader/x-fragment">
 
 	precision mediump float;
 	
@@ -75,53 +75,20 @@ Passing the Model-View Matrix.
 
 </script>
 
-<!-- The JS files -->
+	<!-- The JS files -->
 
-<!-- Handling vectors and matrices -->
-
-<script type="text/javascript" src="maths.js"></script>
-
-<!-- WebGL code -->
-
-<script type="text/javascript" src="initShaders.js"></script>
-
-<script type="text/javascript" src="webgl_project.js"></script>
-
+	<!-- Handling vectors and matrices -->
+	<script type="text/javascript" src="maths.js"></script>
+	<!-- WebGL code -->
+	<script type="text/javascript" src="initShaders.js"></script>
+	<script type="text/javascript" src="utils.js"></script>
+	<script type="text/javascript" src="webgl_project.js"></script>
 </head>
 
 <body onload="runWebGL();">
-
 	<div style="text-align: center">
-		
-		
-		<canvas id="my-canvas" style="border:1px solid #000000;" width="350" height="350"></canvas>
-
-		
-        <p>
-			
-		<button id="XX-rotate-CW-button">XX Rotate CW</button>
-
-		<button id="XX-rotate-CCW-button">XX Rotate CCW</button>
-
-		<button id="YY-rotate-CW-button">YY Rotate CW</button>
-
-		<button id="YY-rotate-CCW-button">YY Rotate CCW</button>
-
-		<button id="ZZ-rotate-CW-button">ZZ Rotate CW</button>
-
-		<button id="ZZ-rotate-CCW-button">ZZ Rotate CCW</button>
-
-		</p>
-	
-
-		<p>
-		
-		<!--<button id="reset-button">Reset</button>-->
-		
-		</p>
-		
+		<canvas id="my-canvas" style="border:1px solid #000000;" width="1280" height="720"></canvas>
 	</div>
-
 </body>
 
 </html>
