--- a/webgl_project.html
+++ b/webgl_project.html
@@ -83,6 +83,8 @@ Passing the Model-View Matrix.
 	<script type="text/javascript" src="initShaders.js"></script>
 	<script type="text/javascript" src="utils.js"></script>
 	<script type="text/javascript" src="webgl_project.js"></script>
+	<script type="text/javascript" src = "sceneModels.js"></script>
+	
 </head>
 
 <body onload="runWebGL();">
