--- a/WebGL.html
+++ b/WebGL.html
@@ -16,8 +16,7 @@ J. Madeira - November 2017 + November 2018
 
 -->
 
-	<title>WebGL NEW example &mdash; Several Light Sources - GPU - Per Vertex Shading</title>
-
+	<title>WebGL Project</title>
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
 	<!--
