--- a/WebGL.html
+++ b/WebGL.html
@@ -228,29 +228,20 @@ The fragment shader is the same simple one.
 
 	<!-- WebGL code -->
 
+	<script type="text/javascript" src="kdTree-min.js"></script>
 	<script type="text/javascript" src="initShaders.js"></script>
-
 	<script type="text/javascript" src="WebGL.js"></script>
-
 </head>
 
 <body onload="runWebGL();">
-
 	<div style="text-align: center">
-
 		<canvas id="my-canvas" style="border:1px solid #000000;" width="1280" height="720"></canvas>
-
-		<!-- NEW --- To show the number of frames per second -->
-
 		<p id="fps"> fps: </p>
-
 		<div id="drop_zone"
 			style="text-align: center; background-color: white; outline: 2px dashed black; width: 1280px; height: 100px; margin: 0 auto;">
 			Drop files here</div>
 	</div>
-
 	</div>
-
 </body>
 
 </html>
